<resources>
    <string name="app_name">BidFish Customer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_screen">Welcome to BidFish!</string>
    <string name="slider_text_2">Do Bidding Easily</string>
    <string name="slider_text_3">Win an Auction</string>
    <string name="desc_slider_3">Here, you can participating to any fish auction and bid easily without time and space limitation.</string>
    <string name="desc_slider_2">Win the auction with your bid price and the auction will be held as fair as possible.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register here. </string>
    <string name="text_1"> New to BidFish?</string>


    <string name="genderprompt">Choose a gender</string>
    <string name="register_btn">Register</string>
    <string name="email">Email</string>



</resources>
