<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.semarmesem.bidfish.bidfishcustomer.Activity.LoginActivity">

    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:src="@drawable/logo_bidfish_main" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_login"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextbg"
            android:fontFamily="@font/overlock"
            android:gravity="center"
            android:hint="Login"
            android:padding="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pass_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/til_email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/til_pass_login"
            android:layout_centerVertical="true"
            android:background="@drawable/edittextbg"
            android:fontFamily="@font/overlock"
            android:gravity="center"
            android:hint="@string/password"
            android:padding="20dp" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_pass_login"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/login"
        android:fontFamily="@font/overlock"
        android:textColor="@android:color/white"
        android:textSize="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/btn_login"
        android:orientation="horizontal">

        <TextView
            android:fontFamily="@font/overlock"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_1"/>

        <TextView
            android:fontFamily="@font/overlock"
            android:id="@+id/tv_register_button"
            android:textSize="15sp"
            android:textColor="@color/colorSecondaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

    </LinearLayout>


</RelativeLayout>
